--- a/node-ejercicio-netflix/package.json
+++ b/node-ejercicio-netflix/package.json
@@ -10,9 +10,11 @@
   "author": "adalab",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.1"
   }
 }
